--- a/personal.html
+++ b/personal.html
@@ -12,6 +12,7 @@
 
   <input type="text" id="symbol">
   <button onclick="buscar()" id="boton">Buscar</button>
+  <a href="index.html">Volver</a><br><br>
 
   <div id="datos">
 
